csharp/MonoWii/CWiid.cs

					
#region Connection
		
		/// <summary>
		/// Establish a connection with a wiimote.
		/// Pass the address of a bdaddr set to *BDADDR_ANY to connect to any (one) available wiimote. In this case, the bdaddr will be filled with the address of the connected wiimote. Due to the bizarre way in which BlueZ implements BDADDR_ANY, it is recommended that BDADDR_ANY not be passed directly to wiimote_connect, as this may change the value of BDADDR_ANY.
		/// </summary>
		/// <param name="bdaddr">
		/// A <see cref="Bluetooth.bdaddr_t"/>
		/// </param>
		/// <param name="flags">
		/// A <see cref="CWIID_FLAGS"/>
		/// </param>
		/// <returns>
		/// A <see cref="IntPtr"/>
		/// </returns>
		[DllImport("libcwiid.so")]
		public static extern IntPtr cwiid_open(ref Bluetooth.bdaddr_t bdaddr, CWIID_FLAGS flags);
		
		//int cwiid_close(cwiid_wiimote_t *wiimote);
		[DllImport("libcwiid.so")]
		public static extern int cwiid_close(IntPtr wiimote);
		
		//int cwiid_get_id(cwiid_wiimote_t *wiimote);
		/// <summary>
		/// Accessor function for the wiimote id, which is guaranteed to be unique among all wiimotes in a single process.Accessor function for the wiimote id, which is guaranteed to be unique among all wiimotes in a single process.
		/// </summary>
		[DllImport("libcwiid.so")]
		public static extern int cwiid_get_id(IntPtr wiimote);
		
		//int cwiid_set_data(cwiid_wiimote_t *wiimote, const void *data);
		[DllImport("libcwiid.so")]
		public static extern int cwiid_set_data(IntPtr wiimote, IntPtr data);
		
		//const void *cwiid_get_data(cwiid_wiimote_t *wiimote);
		[DllImport("libcwiid.so")]
		public static extern IntPtr cwiid_get_data(IntPtr wiimote);
		
		//int cwiid_enable(cwiid_wiimote_t *wiimote, int flags);
		[DllImport("libcwiid.so")]
		public static extern int cwiid_enable(IntPtr wiimote, CWIID_FLAGS flags);
		
		//int cwiid_disable(cwiid_wiimote_t *wiimote, int flags);
		[DllImport("libcwiid.so")]
		public static extern int cwiid_disable(IntPtr wiimote, CWIID_FLAGS flags);
					
#endregion
		
#region Interfaces
		//typedef void cwiid_mesg_callback_t(cwiid_wiimote_t *, int,
        //                           union cwiid_mesg [], struct timespec *);
		public delegate void cwiid_mesg_callback_t(IntPtr wiimote, int mesg_count,IntPtr mesgArray, ref cwiid.timespec timestamp); 
		
		//int cwiid_set_mesg_callback(cwiid_wiimote_t *wiimote, cwiid_mesg_callback_t *callback);
		/// <summary>
		/// Sets the message callback function, which is called when a set of messages are received from the wiimote (each message in a set was generated from the same packet and therefore arrived simultaneously). Note that option flag CWIID_FLAG_MESG_IFC must be enabled for the callback to be called. Passing NULL for the callback cancels the current callback, if there is one.
		/// </summary>
		[DllImport("libcwiid.so")]
		public static extern int cwiid_set_mesg_callback(IntPtr wiimote, cwiid_mesg_callback_t callback);
		
		//int cwiid_get_mesg(cwiid_wiimote_t *wiimote, int *mesg_count, union cwiid_mesg *mesg[], struct timespec *timestamp);
		[DllImport("libcwiid.so")]
		public static extern int cwiid_get_mesg(IntPtr wiimote, ref int mesg_count, IntPtr mesgArray, ref cwiid.timespec timestamp);
		
		[DllImport("libcwiid.so")]
        public static extern int cwiid_get_state(IntPtr wiimote, ref cwiid_state state);
		
		//int cwiid_get_acc_cal(struct wiimote *wiimote, enum cwiid_ext_type ext_type, struct acc_cal *acc_cal);
		[DllImport("libcwiid.so")]
		public static extern int cwiid_get_acc_cal(IntPtr wiimote, cwiid.cwiid_ext_type ext_type, ref cwiid.acc_cal acc_cal);
		
#endregion
		
#region Operations
		
		//int cwiid_command(cwiid_wiimote_t *wiimote, enum cwiid_command command, int flags);
		/// <summary>
		/// Issue command to wiimote. Available commands and their associated flags are as follows:
		/// 
		/// CWIID_CMD_STATUS
		///     Request a status message (delivered to the message callback) (flags ignored) 
		/// CWIID_CMD_LED
		///     Set the LED state. The following flags may be bitwise ORed:
		/// 
		///         * CWIID_LED1_ON
		///         * CWIID_LED2_ON
		///         * CWIID_LED3_ON
		///         * CWIID_LED4_ON 
		/// 
		/// CWIID_CMD_RUMBLE
		///     Set the Rumble state. Set flags to 0 for off, anything else for on. 
		/// CWIID_CMD_RPT_MODE
		///     Set the reporting mode of the wiimote, which determines what wiimote peripherals are enabled, and what data is received by the host. The following flags may be bitwise ORed (Note that it may not be assumed that each flag is a single bit - specifically, CWIID_RPT_EXT = CWIID_RPT_NUNCHUK | CWIID_RPT_CLASSIC):
		/// 
		///         * CWIID_RPT_STATUS
		///         * CWIID_RPT_BTN
		///         * CWIID_RPT_ACC
		///         * CWIID_RPT_IR
		///         * CWIID_RPT_NUNCHUK
		///         * CWIID_RPT_CLASSIC
		///         * CWIID_RPT_EXT 
		/// </summary>
		[DllImport("libcwiid.so")]
		public static extern int cwiid_command(IntPtr wiimote, cwiid.cwiid_command_Flags command, int flags); 
		
		//int cwiid_request_status(cwiid_wiimote_t *wiimote);
		[DllImport("libcwiid.so")]
		public static extern int cwiid_request_status(IntPtr wiimote);
		
		//int cwiid_set_led(cwiid_wiimote_t *wiimote, uint8_t led);
		[DllImport("libcwiid.so")]
		public static extern int cwiid_set_led(IntPtr wiimote, CWIID_LED_FLAGS ledFlags); 
		
		//int cwiid_set_rumble(cwiid_wiimote_t *wiimote, uint8_t rumble);
		[DllImport("libcwiid.so")]
		public static extern int cwiid_set_rumble(IntPtr wiimote, byte rumble); 
		
		// int cwiid_set_rpt_mode(cwiid_wiimote_t *wiimote, uint8_t rpt_mode);
		[DllImport("libcwiid.so")]
		public static extern int cwiid_set_rpt_mode(IntPtr wiimote, CWIID_RPT_FLAGS rpt_mode); 
		
		//int cwiid_read(cwiid_wiimote_t *wiimote, uint8_t flags, uint32_t offset, uint16_t len, void *data);
		[DllImport("libcwiid.so")]
		public static extern int cwiid_read(IntPtr wiimote, cwiid.CWIID_RW_FLAGS flags, System.UInt32 offset, ushort length, IntPtr data);
		
		//int cwiid_write(cwiid_wiimote_t *wiimote, uint8_t flags, uint32_t offset, uint16_t len, const void *data);
		[DllImport("libcwiid.so")]
		public static extern int cwiid_write(IntPtr wiimote, cwiid.CWIID_RW_FLAGS flags, System.UInt32 offset, ushort length, IntPtr data);
		
		// int cwiid_beep(cwiid_wiimote_t *wiimote);
		[DllImport("libcwiid.so")]
		public static extern int cwiid_beep(IntPtr wiimote);
#endregion
		
#region HCI Functions
		// int cwiid_get_bdinfo_array(int dev_id, unsigned int timeout, int max_bdinfo, struct cwiid_bdinfo **bdinfo, uint8_t flags);
		[DllImport("libcwiid.so")]
		public static extern int cwiid_get_bdinfo_array(int dev_id, uint timeout, int max_bdinfo, IntPtr bdinfo, byte flags);
		
		// int cwiid_find_wiimote(bdaddr_t *bdaddr, int timeout);
		[DllImport("libcwiid.so")]
		public static extern int cwiid_find_wiimote(ref Bluetooth.bdaddr_t bdaddr, int timeout);
#endregion
	}
}